# shobo-chat-chi

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Rocket.toml
client/: .eslintrc.js  .gitignore  gulpfile.js  package.json  tsconfig.json  webpack.config.js
client/public/: index.html
client/src/: App.tsx  index.tsx  serviceWorker.ts
client/src/actions/: index.ts
client/src/components/: Button.tsx  Input.tsx  List.tsx  TextArea.tsx
client/src/containers/: MessageArea.ts  MessageList.tsx  NameInput.ts  SendButton.ts  UpdateButton.ts
client/src/http/: index.ts
client/src/reducers/: MessageArea.ts  MessageList.ts  NameInput.ts  index.ts
client/src/types/: Message.ts
migrations/2020-01-19-071311_create_messages/: up.sql
src/: lib.rs  main.rs
src/database/: general.rs  message.rs  mod.rs
src/routes/: message.rs  mod.rs
