[package]
name = "shobo_chat_chi"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.4"
[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_sqlite_pool", "json", "serve"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "r2d2", "chrono"]
[dependencies.diesel_migrations]
version = "1.4"

[dependencies.serde]
version = "1.0"
[dependencies.serde_json]
version = "1.0"
[dependencies.serde_derive]
version = "1.0"

[dependencies.log]
version = "0.4"

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.ws]
version = "0.9"
